apps/grafana/alloy/controllers/namespace.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: alloy
  labels:
    security.kubernetes.io/enforce: privileged
