apps/grafana/alloy/controllers/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: alloy
  namespace: alloy
spec:
  parentRefs:
    - name: cilium-gateway
      namespace: gateway
  hostnames:
    - alloy.benwoodward.cloud
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: alloy
          port: 80
